deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-playground
  template:
    metadata:
      labels:
        app: wil-playground
    spec:
      containers:
      - name: wil-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: wil-playground
