ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p3-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: wil-playground.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-app
            port:
              number: 80
